Fixed Dialog layout issue on Chrome

--- a/src/js/Aras/Themes/base.css
+++ b/src/js/Aras/Themes/base.css
@@ -68,7 +68,8 @@
 	width: 100%;
 }
 
- .dgrid-cell {
+ .dgrid-cell 
+ {
 	padding: 0px;
     width: 80px;
  }
@@ -84,4 +85,10 @@
 .dijitSpinner input.dijitInputInner 
 {
 	text-align: left;
+}
+
+.dijitBorderContainer
+{
+	height: 100%;
+	width: 100%;
 }
