--- a/src/js/Aras/Themes/tundra/tundra.css
+++ b/src/js/Aras/Themes/tundra/tundra.css
@@ -13,6 +13,8 @@
 .tundra .dijitDialogPaneContent 
 {
 	padding: 0px;
+	width: 100%;
+	height: 100%;
 }
 
 .tundra .dijitTextBoxReadOnly
